--- a/assets/infinite-page.css
+++ b/assets/infinite-page.css
@@ -3,12 +3,15 @@
     src: url(fonts/EvilEmpire-4BBVK.ttf);
   }
   
+  *{
+    padding: 0;
+    margin: 0;
+  }
+
   body {
     /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
     font-family: 'Evil', sans-serif;
     overflow-x: hidden;
-    padding: 0;
-    margin: 0;
   }
   
   .main-width {
@@ -25,52 +28,41 @@
     background: #f0f0f0;
     position: relative;
 
+
   }
   
-  .hero header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Center elements vertically */
-    align-items: center; /* Center elements horizontally */
-  }
   
   .hero header .game-name h2 {
-    display: block;
-    font-size:9vw;
-    transform: scale(.7, 1);
-    text-decoration: none;
-    color: #2BAE66;
-    letter-spacing: 5px;
-    /* -webkit-text-fill-color: black;
-    -webkit-text-stroke-color: white;
-    -webkit-text-stroke-width: 1px; */
-    margin-bottom: 20px; 
-  }
-  
-  nav {
-    display: flex;
-    flex-direction: column; /* Display nav items in a vertical list */
-    justify-content: center; /* Center nav items horizontally */
-    align-items: center; /* Center nav items vertically */
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
+      display: block;
+      font-size: 3.5vw;
+      transform: scale(.7, 1);
+      text-decoration: none;
+      color: #2BAE66;
+      letter-spacing: 5px;
+      /* -webkit-text-fill-color: black;
+      -webkit-text-stroke-color: white;
+      -webkit-text-stroke-width: 1px; */
+      margin-bottom: 20px; 
+      
+    }
+    .hero header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; /* Center elements horizontally */
+    }
+    
   nav ul li {
-    margin: 15px 0; /* Add space between nav items */
-    display: flex;
-    justify-content: center; /* Center nav items horizontally */
-    align-items: center; /* Center nav items vertically */
+    margin: 10px 0; /* Add space between nav items */
+    list-style: none;
+    display:inline-block;
+
   }
   
   nav ul li a {
     color: #2BAE66;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 18px;
+    margin-left: 70px;
     letter-spacing: 0.4px;
     border-bottom: 2px solid transparent;
     transition: 0.5s;
