--- a/assets/home-page.css
+++ b/assets/home-page.css
@@ -1,104 +1,167 @@
 @font-face {
-    font-family: Evil;
-    src: url(fonts/EvilEmpire-4BBVK.ttf);
-  }
-  
-  body {
-    /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
-    font-family: 'Evil', sans-serif;
-    overflow-x: hidden;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .main-width {
-    width: 1400px;
-    max-width: 95%;
-    margin: 0 auto;
-  }
-  
-  .hero {
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    /* background: radial-gradient(#f0b57a, 20%, #703709); */
-    background: #f0f0f0;
-    position: relative;
+  font-family: Evil;
+  src: url(fonts/EvilEmpire-4BBVK.ttf);
+}
 
-  }
-  
-  .hero header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Center elements vertically */
-    align-items: center; /* Center elements horizontally */
-  }
-  
-  .hero header .game-name h2 {
-    display: block;
-    font-size:9vw;
-    transform: scale(.7, 1);
-    text-decoration: none;
-    color: #2BAE66;
-    letter-spacing: 5px;
-    /* -webkit-text-fill-color: black;
+body {
+  /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
+  font-family: 'Evil', sans-serif;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+.main-width {
+  width: 1400px;
+  max-width: 95%;
+  margin: 0 auto;
+}
+
+.hero {
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  /* background: radial-gradient(#f0b57a, 20%, #703709); */
+  background: #caeebf;
+  position: relative;
+}
+
+.hero header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* Center elements vertically */
+  align-items: center;
+  /* Center elements horizontally */
+}
+
+.hero header .game-name h2 {
+  display: block;
+  font-size: 9vw;
+  transform: scale(.7, 1);
+  text-decoration: none;
+  color: #2BAE66;
+  letter-spacing: 5px;
+  /* -webkit-text-fill-color: black;
     -webkit-text-stroke-color: white;
     -webkit-text-stroke-width: 1px; */
-    margin-bottom: 20px; 
-  }
-  
-  nav {
-    display: flex;
-    flex-direction: column; /* Display nav items in a vertical list */
-    justify-content: center; /* Center nav items horizontally */
-    align-items: center; /* Center nav items vertically */
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  nav ul li {
-    margin: 15px 0; /* Add space between nav items */
-    display: flex;
-    justify-content: center; /* Center nav items horizontally */
-    align-items: center; /* Center nav items vertically */
-  }
-  
-  nav ul li button {
-    border: 0;
-    color: #2BAE66;
-    text-decoration: none;
-    font-size: 24px;
-    letter-spacing: 0.4px;
-    border-bottom: 2px solid transparent;
-    transition: 0.5s;
-  }
-  
-  button {
-    font-family: 'Evil', sans-serif;
-  }
-  
-  nav ul li:not(:last-child) button:hover,
-  nav ul li:not(:last-child) button:focus{
-    border-bottom: 2px solid #2BAE66;
-  }
-  
-  nav ul li.help button {
-    margin: 20px;
-    background: transparent;
-    color: #2BAE66;
-    padding: 8px 15px;
-    border: 1px solid #2BAE66;
-    border-radius: 30px;
-  }
-  
-  nav ul li.help:hover button {
-    border: 1px solid #2BAE66;
-    color: white;
-    background: #2BAE66;
-    transition: 0.5s;
-  }
-  
+
+  margin-bottom: 20px;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  /* Display nav items in a vertical list */
+  justify-content: center;
+  /* Center nav items horizontally */
+  align-items: center;
+  /* Center nav items vertically */
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  margin: 15px 0;
+  /* Add space between nav items */
+  display: flex;
+  justify-content: center;
+  /* Center nav items horizontally */
+  align-items: center;
+  /* Center nav items vertically */
+}
+
+nav ul li button {
+  border: 0;
+  background: transparent;
+  color: #2BAE66;
+  text-decoration: none;
+  font-size: 24px;
+  letter-spacing: 0.4px;
+  border-bottom: 2px solid transparent;
+  transition: 0.5s;
+}
+
+button {
+  font-family: 'Evil', sans-serif;
+}
+
+nav ul li:not(:last-child) button:hover,
+nav ul li:not(:last-child) button:focus {
+  border-bottom: 2px solid #2BAE66;
+}
+
+nav ul li.help button {
+  margin: 20px;
+  background: transparent;
+  color: #2BAE66;
+  padding: 8px 15px;
+  border: 1px solid #2BAE66;
+  border-radius: 30px;
+}
+
+nav ul li.help:hover button {
+  border: 1px solid #2BAE66;
+  color: white;
+  background: #2BAE66;
+  transition: 0.5s;
+}
+
+/* Styles for the modal */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+  /* Enable vertical scrolling */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 33%;
+  height: 50%;
+  border-style: ridge;
+  border-color: #2BAE66;
+  border-width: 20px;
+  background: #caeebf;
+  /* Use the desired value */
+  box-sizing: border-box;
+  /* Ensure padding and border are included in the width */
+  overflow-y: auto;
+  /* Enable vertical scrolling */
+  border-radius: 8px;
+  position: relative;
+  /* Add relative positioning to the modal content */
+}
+
+.close {
+  /* Update the styles for the close button */
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  /* Adjust the top and right values to position the button in the top-right corner */
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
