--- a/assets/infinite-page.css
+++ b/assets/infinite-page.css
@@ -1,79 +1,87 @@
 @font-face {
-    font-family: Evil;
-    src: url(fonts/EvilEmpire-4BBVK.ttf);
-  }
-  
-  *{
-    padding: 0;
-    margin: 0;
-  }
+  font-family: Evil;
+  src: url(fonts/EvilEmpire-4BBVK.ttf);
+}
 
-  body {
-    /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
-    font-family: 'Evil', sans-serif;
-    border: 10px solid #f0f0f0;
-    overflow-x: hidden;
-  }
-  
-  .main-width {
-    width: 1400px;
-    max-width: 95%;
-    margin: 0 auto;
-  }
-  
-  .hero {
-    height: 100%;
-    width: 100%;
-    min-height: 100vh;
-    /* background: radial-gradient(#f0b57a, 20%, #703709); */
-    background: #f0f0f0;
-    position: relative;
+* {
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
+  font-family: 'Evil', sans-serif;
+  overflow-x: hidden;
+}
 
-  }
-  
- 
-  
-  .hero header .game-name h2 {
-      display: block;
-      font-size: 3.5vw;
-      transform: scale(.7, 1);
-      text-decoration: none;
-      color: #2BAE66;
-      letter-spacing: 5px;
-      position: relative;
-      top: 11px;
-      /* -webkit-text-fill-color: black;
+.main-width {
+  width: 1400px;
+  max-width: 95%;
+  margin: 0 auto;
+}
+
+.hero {
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  /* background: radial-gradient(#f0b57a, 20%, #703709); */
+  background: #caeebf;
+  position: relative;
+}
+
+.hero header .game-name h2 {
+  display: block;
+  font-size: 3.5vw;
+  transform: scale(.7, 1);
+  text-decoration: none;
+  color: #2BAE66;
+  letter-spacing: 5px;
+  position: relative;
+  top: 11px;
+  /* -webkit-text-fill-color: black;
       -webkit-text-stroke-color: white;
       -webkit-text-stroke-width: 1px; */
-      margin-bottom: 20px; 
-      
-    }
-    .hero header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center; /* Center elements horizontally */
-    }
-    
-  nav ul li {
+  margin-bottom: 20px;
+}
 
-    list-style: none;
-    display:inline-block;
+.hero header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* Center elements horizontally */
+  border-bottom: 2px solid #2BAE66;
+  /* Add the border */
 
-  }
-  
-  nav ul li a {
-    color: #2BAE66;
-    text-decoration: none;
-    font-size: 18px;
-    margin-left: 60px;
-    letter-spacing: 0.4px;
-    border-bottom: 2px solid transparent;
-    transition: 0.5s;
-  }
-  
-  nav ul li a:hover,
-  nav ul li a:focus {
-    border-bottom: 2px solid #2BAE66;
-  }
-  
+  /* Add some padding to the bottom of the header */
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+}
+
+/* Styles for all buttons */
+button,
+nav ul li button {
+  border: 0;
+  background: transparent;
+  color: #2BAE66;
+  text-decoration: none;
+  font-size: 24px;
+  letter-spacing: 0.4px;
+  border-bottom: 2px solid transparent;
+  transition: 0.5s;
+  font-family: 'Evil', sans-serif;
+  /* Add the custom font */
+}
+
+nav ul li:not(:last-child) {
+  margin-right: 20px;
+}
+
+button:hover,
+button:focus,
+nav ul li button:hover,
+nav ul li button:focus {
+  border-bottom: 2px solid #2BAE66;
+}
