--- a/assets/infinite-page.css
+++ b/assets/infinite-page.css
@@ -87,8 +87,11 @@ nav ul li button:focus {
 }
 
 /* Container for both the background div and the graph */
-.container {
-  position: relative; /* Add relative positioning to the container */
+.rightContainer {
+  width: 65%; /* Adjust the width as needed */
+  margin-left: 35%; /* Align the right container */
+  margin-top: 100px;
+  position: relative;
 }
 
 /* Styles for the background div */
@@ -144,4 +147,74 @@ nav ul li button:focus {
   bottom: 175px;
   }
 
+
+  /* Dropdown Button */
+.dropbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+/* The search field */
+#myInput {
+  box-sizing: border-box;
+  background-image: url('searchicon.png');
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {outline: 3px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+.left-container {
+  background-color: #f0f0f0;
+  width: 25%; /* Adjust the width as needed */
+  padding: 20px;
+  border-radius: 10px;
+  position: absolute;
+  top: 110px;
+  left: 40px;
+}
   
