--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -54,9 +54,11 @@
   .tiles-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 85%;
     gap: 20px;
     padding: 20px;
   }
+  
   
   .stock-tile {
     background-color: #f0f0f0;
@@ -64,4 +66,20 @@
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
+  
+  .skinny-tile {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 160px;
+    margin-top: 40px;
+    right: 25px;
+    transform: translateY(-50%);
+    width: calc(15vw - 40px); /* 90vw for 90% of viewport width, subtract 40px for padding */
+    margin-right: 0px; /* Add a margin for spacing */
+  }
+
+
   
