--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -1,117 +1,197 @@
-@font-face {
-  font-family: Evil;
-  src: url(fonts/EvilEmpire-4BBVK.ttf);
+html,
+body {
+  overflow: hidden;
 }
 
 body {
-  /* font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif; */
-  font-family: 'Evil', sans-serif;
-  overflow-x: hidden;
-  padding: 0;
-  margin: 0;
-}
-
-.main-width {
-  width: 1400px;
-  max-width: 95%;
-  margin: 0 auto;
-}
-
-.hero {
-  height: 100%;
-  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  display: grid;
+  grid-template-rows: 70px 1fr 100px;
+  grid-template-columns: 1fr 1fr;
   min-height: 100vh;
-  /* background: radial-gradient(#f0b57a, 20%, #703709); */
-  background: #caeebf;
-  position: relative;
+  margin: 0;
+  /* Remove margin */
+  padding: 0;
+  /* Remove padding */
+
+  background: #446ef8;
+
 }
 
-.hero header {
+header {
+
+  width: 100%;
+  /* Ensure full width */
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  /* Align items to the left and right */
+  align-items: center;
+  /* Center vertically */
+  text-align: center;
+  padding: 0 20px;
+  /* Add horizontal padding to the header */
+  grid-column: span 2;
+}
+
+header h1 {
+  /* font-family: 'Orbitron', sans-serif; */
+  /* font-size: 58px; */
+  /* Your h1 styles remain the same */
+  /* position: absolute; */
+  left: 50%;
+  color: #040568;
+
+}
+
+#button-container {
+  display: flex;
+  flex-direction: row;
+  /* Arrange buttons vertically */
+}
+
+/* Style the buttons */
+#leaderboard {
+  display: block;
+  width: auto;
+  /* Let the button size adjust to content */
+  padding: 10px 20px;
+  /* Reduce padding to make the buttons smaller */
+  background-color: #393946;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  /* Increase border-radius for rounded edges */
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: 50px;
+  margin-right: 30px;
+}
+
+#help {
+  display: block;
+  width: auto;
+  /* Let the button size adjust to content */
+  padding: 10px 20px;
+  /* Reduce padding to make the buttons smaller */
+  background-color: #040568;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  /* Increase border-radius for rounded edges */
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: 50px;
+}
+
+/* Hover effect for buttons */
+#leaderboard:hover,
+#help:hover,
+#hundyyears:hover {
+  background-color: #0e12db;
+}
+
+main {
+  /* grid-row: span 2; */
+  display: flex;
+  align-items: center;
+  /* Center the content vertically */
+  justify-content: center;
+}
+
+#arrows {
+  max-width: 100%;
+  /* Limit the width to the container's width */
+  max-height: 100%;
+  /* Limit the height to the container's height */
+}
+
+
+menu {
   display: flex;
   flex-direction: column;
+  /* Arrange items vertically */
+  /* align-items: center; */
+  /* Center items horizontally */
   justify-content: center;
-  /* Center elements vertically */
-  align-items: center;
-  /* Center elements horizontally */
+  /* Center items vertically */
+  height: 100%;
+  /* Ensure menu takes full height */
 }
 
-.hero header .game-name h2 {
-  display: block;
-  font-size: 9vw;
-  transform: scale(.7, 1);
-  text-decoration: none;
-  color: #2BAE66;
-  letter-spacing: 5px;
-  /* -webkit-text-fill-color: black;
-    -webkit-text-stroke-color: white;
-    -webkit-text-stroke-width: 1px; */
-
+#stock-text {
   margin-bottom: 20px;
+  align-self: flex-start;
+  /* Add spacing between elements */
+}
+
+menu h2 {
+  font-size: 60px;
+}
+
+#start-button {
+  align-self: flex-start;
+  /* Align the button to the left */
+}
+
+#hundyyears {
+  display: block;
+  width: auto;
+  /* Let the button size adjust to content */
+  padding: 10px 20px;
+  /* Reduce padding to make the buttons smaller */
+  background-color: #040568;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  /* Increase border-radius for rounded edges */
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 nav {
-  display: flex;
-  flex-direction: column;
-  /* Display nav items in a vertical list */
-  justify-content: center;
-  /* Center nav items horizontally */
-  align-items: center;
-  /* Center nav items vertically */
+  flex-grow: 1;
+  /* Allow the nav element to grow and take up all available space */
 }
 
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+nav button {
+  display: block;
+  /* width: 100%; */
+  /* Make the buttons take up the full width of the parent container */
+  height: 100%;
+  /* Make the buttons take up the full height of the parent container */
+  margin: 0 auto;
+  /* Center the buttons horizontally */
+  padding: 15px;
+  background-color: transparent;
+  color: #040568;
+  border: none;
+  border-radius: 5px;
+  font-size: 48px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: center;
+  /* Center the button text horizontally */
 }
 
-nav ul li {
-  margin: 15px 0;
-  /* Add space between nav items */
-  display: flex;
-  justify-content: center;
-  /* Center nav items horizontally */
-  align-items: center;
-  /* Center nav items vertically */
+/* Add spacing between the buttons */
+nav li {
+  margin: 10px 0;
 }
 
-nav ul li button {
-  border: 0;
-  background: transparent;
-  color: #2BAE66;
-  text-decoration: none;
-  font-size: 24px;
-  letter-spacing: 0.4px;
-  border-bottom: 2px solid transparent;
-  transition: 0.5s;
+/* Hover effect for buttons */
+nav button:hover {
+  background-color: #0e12db;
 }
 
-button {
-  font-family: 'Evil', sans-serif;
-}
 
-nav ul li:not(:last-child) button:hover,
-nav ul li:not(:last-child) button:focus {
-  border-bottom: 2px solid #2BAE66;
-}
 
-nav ul li.help button {
-  margin: 20px;
-  background: transparent;
-  color: #2BAE66;
-  padding: 8px 15px;
-  border: 1px solid #2BAE66;
-  border-radius: 30px;
-}
 
-nav ul li.help:hover button {
-  border: 1px solid #2BAE66;
-  color: white;
-  background: #2BAE66;
-  transition: 0.5s;
-}
 
-/* Styles for the modal */
+
 .modal {
   display: none;
   /* Hidden by default */
@@ -127,41 +207,8 @@ nav ul li.help:hover button {
 }
 
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
+  background-color: #f0f0f0;
+  border-radius: 10px;
   padding: 20px;
-  border: 1px solid #888;
-  width: 33%;
-  height: 50%;
-  border-style: ridge;
-  border-color: #2BAE66;
-  border-width: 20px;
-  background: #caeebf;
-  /* Use the desired value */
-  box-sizing: border-box;
-  /* Ensure padding and border are included in the width */
-  overflow-y: auto;
-  /* Enable vertical scrolling */
-  border-radius: 8px;
-  position: relative;
-  /* Add relative positioning to the modal content */
-}
-
-.close {
-  /* Update the styles for the close button */
-  color: #aaa;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-  position: absolute;
-  top: 8px;
-  right: 16px;
-  /* Adjust the top and right values to position the button in the top-right corner */
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
