fix: static analysis errors

--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -174,7 +174,7 @@ header h1 {
   position: relative;
 
   border-style: solid;
-  border-color: 446ef8;
+  border-color: #446ef8;
   border-radius: 10px;
   border-width: 5px;
   box-sizing: border-box;
