--- a/assets/100years.css
+++ b/assets/100years.css
@@ -44,6 +44,11 @@ header h1 {
 
 }
 
+.totalBalance {
+  font-size: 18px;
+  color: #040568;
+}
+
 #button-container {
   display: flex;
   flex-direction: row;
@@ -96,35 +101,13 @@ button {
   cursor: pointer;
 }
 
-/* Styles for all buttons */
-nav ul li button,
-#dateTime {
-  border: 0;
-  background: transparent;
-  color: #2BAE66;
-  text-decoration: none;
-  font-size: 24px;
-  letter-spacing: 0.4px;
-  border-bottom: 2px solid transparent;
-  transition: 0.5s;
-  font-family: 'Evil', sans-serif;
-  border-radius: 0;
-  /* Add the custom font */
-}
 
 #dateTime {
+  font-size: 18px;
+  color: #040568;
   margin-left: 10px;
   font-weight: 300;
   min-width: 110px;
-}
-
-nav ul li:not(:last-child) {
-  margin-right: 20px;
-}
-
-nav ul li button:hover,
-nav ul li button:focus {
-  border-bottom: 2px solid #040568;
 }
 
 .container {
